--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,18 @@
 cmake_minimum_required(VERSION 2.6)
 project(monitor)
 
-find_package(Curses REQUIRED)
-include_directories(${CURSES_INCLUDE_DIRS})
+#find_package(Curses REQUIRED)
+#include_directories(${CURSES_INCLUDE_DIRS})
 
 include_directories(include)
+include_directories(src)
 file(GLOB SOURCES "src/*.cpp")
+file(GLOB SOURCES "test/*.cpp")
+
 
 add_executable(monitor ${SOURCES})
 
 set_property(TARGET monitor PROPERTY CXX_STANDARD 17)
-target_link_libraries(monitor ${CURSES_LIBRARIES})
+#target_link_libraries(monitor ${CURSES_LIBRARIES})
 # TODO: Run -Werror in CI.
 target_compile_options(monitor PRIVATE -Wall -Wextra)
